sass/misc.scss
.linkflairlabel {
	color: $light_text;
	border: lighten(black, 20%) 1px solid;
	background: black;
}

// Dropdowns, both the subreddit menu and comment orderer, maybe others too

.drop-choices {
	//display: block !important;
	color: $light_text;
	background: $grey_background_2;
	a, a.choice {
		color: $light_text;
		&:hover {
			background: $grey_background;
		}
	}
}

body > .content .link .rank,
.rank-spacer {
	width: 2.2ex !important;
}

// about/edit settings
.linefield, .linefield.mobile {
	background: transparent;
	border: none;
	.title {
		color: $green_title;
	}
	a {
		color: $title;
	}
}

// expandos

.expando-button {
	background-color: transparent;
	&.selftext {
		&.collapsed {
			@include sprite($expando-aa-fw);
		}
		&.collapsed:hover,
		&.expanded,
		&.expanded:hover {
			@include sprite($expando-aa-dark-fw);
		}
	}

	&.video {
		&.collapsed {
			@include sprite($expando-plus-fw);
		}
		&.collapsed:hover,
		&.expanded,
		&.expanded:hover {
			@include sprite($expando-plus-dark-fw);
		}
	}

	// image and gallery are additional expandos added by RES
	// beware: many !important hacks...
	&.image {

		// these should probably be take from $expando-image... but whatever
		max-width: 25px !important;
		max-height: 25px !important;

		&.collapsed {
			@include sprite($expando-image-fw);
			// Hack for RES
			background-position: $expando-image-fw-offset-x $expando-image-fw-offset-y !important;
		}

		&.collapsed:hover,
		&.expanded,
		&.expanded:hover {
			@include sprite($expando-image-dark-fw);
			// Hack for RES
			background-position: $expando-image-dark-fw-offset-x $expando-image-dark-fw-offset-y !important;
		}
	}

	&.gallery {

		max-width: 25px !important;
		max-height: 25px !important;

		&.collapsed {
			@include sprite($expando-gallery-fw);
			background-position: $expando-gallery-fw-offset-x $expando-gallery-fw-offset-y !important;
		}
		&.collapsed:hover,
		&.expanded,
		&.expanded:hover {
			@include sprite($expando-gallery-dark-fw);
			background-position: $expando-gallery-dark-fw-offset-x $expando-gallery-dark-fw-offset-y !important;
		}
	}

	&.video-muted {

		max-width: 25px !important;
		max-height: 25px !important;

		&.collapsed {
			@include sprite($expando-plus-fw);
			background-position: $expando-plus-fw-offset-x $expando-plus-fw-offset-y !important;
		}
		&.collapsed:hover,
		&.expanded,
		&.expanded:hover {
			@include sprite($expando-plus-dark-fw);
			background-position: $expando-plus-dark-fw-offset-x $expando-plus-dark-fw-offset-y !important;
		}
	}

}

// archived post modal popup thingy
.interstitial-message.md-container .md {
	color: #222;
}

//spoilers
//
a[href="/spoiler"],
a[href="/s"],
a[href="#spoiler"],
a[href="#s"] {
	background: rgba(0, 0, 0, 0.2);
	color: transparent !important;
	text-shadow: 0 0 8px rgba(0, 0, 0, 0.9);
	cursor: default;

	&:hover {
		color: $grey_text !important;
		text-shadow: 0 0 0 !important;
	}

	&:active {
		pointer-events: none;
	}
}

html[lang="ns"] {
	.linkflair-spoiler a.title,
	.linkflair-spoiler a.title:visited {
		background: rgba(0, 0, 0, 0.2);
		color: transparent !important;
		text-shadow: 0 0 8px rgba($light_text, 0.9);
	}

	.linkflair-spoiler a.title:hover,
	.linkflair-spoiler:hover a.title {
		background: transparent !important;
		color: darken($title, 20%) !important;
		text-shadow: 0 0 0 !important;
	}

}

.link.promotedlink.promoted,
.link.promotedlink.external,
.organic-listing .link,
.organic-listing .link.compressed,
.organic-listing .link.promotedlink,
.organic-listing .promoted,
.link.promotedlink,
.organic-listing .link {
	background: url(../images/repeat-bg.jpg) left #111;
}

// Mod Report Reasons
ul.report-reasons {
	background-color: transparent;
}

.entry .buttons li.reported-stamp {
	color: #111111;
}

//search
.searchpane {
	background: $grey_background_2;
	color: $grey_text;
	border: 1px solid $grey_border;

	@include wow-link();

	input[type=text] {
		background: $grey_background_2;
		border: 1px solid $grey_border;
		color: #ddd !important;
	}
}

//debug for search, also footer
.debuginfo {
	color: $light_text
}

//beta clickbox???
.expand-media:hover {
	overflow: unset !important;
}

